--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "pymupdf>=1.26.6",
     "playwright-stealth>=2.0.0",
     "pypdfium2>=5.1.0",
+    "markitdown[pdf]>=0.1.4",
 ]
 requires-python = ">=3.12"
 
