--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ dependencies = [
     "playwright-stealth>=2.0.0",
     "pypdfium2>=5.1.0",
     "markitdown[pdf]>=0.1.4",
+    "redfin>=0.1.1",
+    "pyngrok>=7.5.0",
 ]
 requires-python = ">=3.12"
 
