--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "markitdown[pdf]>=0.1.4",
     "redfin>=0.1.1",
     "pyngrok>=7.5.0",
+    "homeharvest>=0.8.11",
 ]
 requires-python = ">=3.12"
 
