--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "redfin>=0.1.1",
     "pyngrok>=7.5.0",
     "homeharvest>=0.8.11",
+    "jinja2>=3.1.6",
 ]
 requires-python = ">=3.12"
 
