--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "pyngrok>=7.5.0",
     "homeharvest>=0.8.11",
     "jinja2>=3.1.6",
+    "rapidfuzz>=3.14.3",
 ]
 requires-python = ">=3.12"
 
