--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "mcp",
     "duckdb",
     "requests",
+    "json-repair",
     "numpy",
     "Pillow",
     "pydantic",
@@ -34,7 +35,7 @@ dependencies = [
     "jinja2>=3.1.6",
     "rapidfuzz>=3.14.3",
 ]
-requires-python = ">=3.12"
+requires-python = ">=3.12,<3.13"
 
 [tool.setuptools]
 py_modules = ["main", "data_store"]
