--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ dependencies = [
     "fastapi",
     "uvicorn",
     "mcp",
-    "duckdb",
     "requests",
     "json-repair",
     "numpy",
@@ -34,6 +33,7 @@ dependencies = [
     "homeharvest>=0.8.11",
     "jinja2>=3.1.6",
     "rapidfuzz>=3.14.3",
+    "python-dotenv>=1.0.0",
 ]
 requires-python = ">=3.12,<3.13"
 
