--- a/pyproject.toml
+++ b/pyproject.toml
@@ -392,3 +392,11 @@ markers = [
     "integration: marks tests as integration tests",
     "gpu: marks tests that require GPU",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest-asyncio>=1.3.0",
+    "pytest-cov>=7.0.0",
+    "pytest-mock>=3.15.1",
+    "pytest-timeout>=2.4.0",
+]
