--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,9 @@ dependencies = [
     "jinja2>=3.1.6",
     "rapidfuzz>=3.14.3",
     "python-dotenv>=1.0.0",
+    "paramiko>=4.0.0",
+    "sqlalchemy>=2.0.46",
+    "psycopg[binary]>=3.3.2",
 ]
 requires-python = ">=3.12,<3.13"
 
